tests/invalid_programs/import2.con
mod Simple {
    import Hello.{world};

    fn main() -> i64 {
        return 0;
    }
}

mod Hello {
    fn not_found() {

    }
}
